--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="32dp"
         android:text="Galeria" />
 
     <ImageView
@@ -29,6 +30,11 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:text="PREV" />
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
 
         <Button
             android:id="@+id/buttonPrawo"
@@ -61,7 +67,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <Switch
@@ -70,5 +76,11 @@
             android:layout_height="wrap_content"
             android:text="Tło niebieskie?" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Autor: 09876543212345678" />
 
 </LinearLayout>
