--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        android:src="@drawable/luki" />
+        android:src="@drawable/kot1" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,6 +34,11 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:text="PREV" />
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
 
         <Button
             android:id="@+id/buttonPrawo"
